crates/aviutl2-macros/src/snapshots/aviutl2_macros__filter_config_items__tests__check.snap
---
source: crates/aviutl2-macros/src/filter_config_items.rs
expression: "rustfmt_wrapper::rustfmt(output).unwrap()"
---
struct Config {
    enable: bool,
}
#[automatically_derived]
impl ::aviutl2::filter::FilterConfigItems for Config {
    fn to_config_items() -> Vec<::aviutl2::filter::FilterConfigItem> {
        return vec![::aviutl2::filter::FilterConfigItem::Check(
            ::aviutl2::filter::FilterConfigCheck {
                name: "Enable".to_string(),
                value: true,
            },
        )];
    }
    fn from_config_items(items: &[::aviutl2::filter::FilterConfigItem]) -> Self {
        Self {
            enable: match items[0usize] {
                ::aviutl2::filter::FilterConfigItem::Check(ref check) => check.value,
                _ => panic!("expected Check at index {}", 0usize),
            },
        }
    }
}
#[automatically_derived]
impl ::std::default::Default for Config {
    fn default() -> Self {
        Self { enable: true }
    }
}
