crates/aviutl2-macros/src/snapshots/aviutl2_macros__filter_config_items__tests__track_with_decimal_step.snap
---
source: crates/aviutl2-macros/src/filter_config_items.rs
assertion_line: 1943
expression: "rustfmt_wrapper::rustfmt(output).unwrap()"
---
struct Config {
    frequency: f64,
}
#[automatically_derived]
impl ::aviutl2::filter::FilterConfigItems for Config {
    fn to_config_items() -> Vec<::aviutl2::filter::FilterConfigItem> {
        return vec![::aviutl2::filter::FilterConfigItem::Track(
            ::aviutl2::filter::FilterConfigTrack {
                name: "Frequency".to_string(),
                value: 440f64,
                range: 20f64..=20000f64,
                step: 0.01f64,
            },
        )];
    }
    fn from_config_items(items: &[::aviutl2::filter::FilterConfigItem]) -> Self {
        Self {
            frequency: match items[0usize] {
                ::aviutl2::filter::FilterConfigItem::Track(ref track) => track.value as _,
                _ => panic!("expected Track at index {}", 0usize),
            },
        }
    }
}
#[automatically_derived]
impl ::std::default::Default for Config {
    fn default() -> Self {
        Self {
            frequency: 440f64 as _,
        }
    }
}
